fixed player popup not showing correctly

--- a/src/components/board/css/board.module.scss
+++ b/src/components/board/css/board.module.scss
@@ -10,7 +10,8 @@
   border: solid 30px var(--board-outline-color);
   border-radius: var(--board-border-radius);
   background: var(--board-outline-color);
-  box-shadow: 10px 20px black;
+  box-shadow: var(--board-shadow);
+  z-index: 1;
 }
 
 .container > .inner {
